--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Nura Heating & Cooling</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/maintenance.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/wrench.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -38,9 +38,11 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Your Local HVAC Professionals</div>
-                <div class="masthead-heading text-uppercase">When Your Home Needs Help, We're Here For You</div>
+                <div class="masthead-subheading">Your Local New Home HVAC Professionals</div>
+                <div class="masthead-heading text-uppercase">When Your New Home Needs Help, We're Here For You</div>
                 <h3><i class="fa-solid fa-phone"></i>  Call Today  <span style="color: #ffc800">(773) 704-6326</span></h3>
+                <h3>&nbsp;</h3>
+                <h4>Services Available 24/7</h4>
                 <h3>&nbsp;</h3>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Learn More</a>
             </div>
@@ -56,14 +58,14 @@
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-sun fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-fire fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Heating</h4>
-                        <p class="text-muted">Heating System Installation</p>
-                        <p class="text-muted">Heating System Repair</p>
-                        <p class="text-muted">Heating System Replacement</p>
-                        <p class="text-muted">Heating System Maintenance</p>
-                        <p class="text-muted">Heat Pump Services</p>
+                        <p class="text-muted">New Heat Pumps Installation</p>
+                        <p class="text-muted">Heating System Efficiency Upgrade</p>
+                        <p class="text-muted">Boilers Installation</p>
+                        <p class="text-muted">Garage Heaters Installation</p>
+                        <p class="text-muted">Ductwork Service</p>
                         <p class="text-muted">&nbsp;</p>
                     </div>
                     <div class="col-md-3">
@@ -73,9 +75,9 @@
                         </span>
                         <h4 class="my-3">Cooling</h4>
                         <p class="text-muted">AC System Installation</p>
-                        <p class="text-muted">AC System Repair</p>
-                        <p class="text-muted">AC System Replacement</p>
-                        <p class="text-muted">AC System Maintenance</p>
+                        <p class="text-muted">Cooling System Efficiency Upgrade</p>
+                        <p class="text-muted">Mini-Split Systems Installation</p>
+                        <p class="text-muted">Garage Cooling System Installation</p>
                         <p class="text-muted">Ductless HVAC Service</p>
                         <p class="text-muted">&nbsp;</p>
                     </div>
@@ -85,10 +87,9 @@
                             <i class="fas fa-droplet fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Plumbing</h4>
-                        <p class="text-muted">Drain Services</p>
-                        <p class="text-muted">Sewer Services</p>
-                        <p class="text-muted">Water Heaters</p>
-                        <p class="text-muted">Water Treatment & Purification</p>
+                        <p class="text-muted">Faucets Installation & Repair</p>
+                        <p class="text-muted">Water Heaters Installation</p>
+                        <p class="text-muted">Toilet Installation</p>
                         <p class="text-muted">Piping & Repiping</p>
                     </div>
                     <div class="col-md-3">
@@ -97,10 +98,10 @@
                             <i class="fas fa-lightbulb fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Electrical</h4>
+                        <p class="text-muted">Whole House Generator</p>
+                        <p class="text-muted">Tesla Wall Charger Installation</p>
                         <p class="text-muted">Wiring & Rewiring</p>
                         <p class="text-muted">AC Panels & Circuit Breakers</p>
-                        <p class="text-muted">AC Whole Home Surge Protection</p>
-                        <p class="text-muted">Interior Lighting</p>
                         <p class="text-muted">Outlets & Switches</p>
                     </div>
                 </div>
@@ -154,16 +155,6 @@
                             <div class="timeline-body"><p class="text-muted">We offer heating, cooling, plumbing & electrical services. Let Nura be your one stop shop for home services.</p></div>
                         </div>
                     </li>
-                    <li>
-                      <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/13.jpg" alt="..." /></div>
-                      <div class="timeline-panel">
-                          <div class="timeline-heading">
-                              <h4>Lifetime Warranties</h4>
-                              <!-- <h4 class="subheading">An Agency is Born</h4> -->
-                          </div>
-                          <div class="timeline-body"><p class="text-muted">We offer lifetime parts warranties on select, high-efficiency systems.</p></div>
-                      </div>
-                    </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
@@ -179,11 +170,11 @@
             </div>
         </section>
         <!-- Team-->
-        <section class="page-section bg-light" id="team">
+        <!-- <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                     <h3>&nbsp;</h3>
                 </div>
                 <div class="row">
@@ -229,10 +220,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <!-- <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div> -->
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Clients-->
         <!-- <div class="py-5">
             <div class="container">
@@ -270,23 +261,19 @@
                     <p style="color: #fff; margin-left: 2em">elvisnura11@gmail.com</p>
                     <p >&nbsp;</p>
 
-                    <H3 style="color: #fff"><i class="fa-solid fa-house fa-2xs"></i> Address</H3>
-                    <p style="color: #fff; margin-left: 2em">
-                      S Cottage Hill Ave<br>
-                      Elmhurst, IL 60126
-                    </p>
+
                     <p >&nbsp;</p>
                   </div>
                   <div class="col-md-6">
                     <H3 style="color: #fff"><i class="fa-solid fa-clock fa-2xs"></i> Hours of Operation <span style="font-size: small">(*Holiday hours may be different)</span></H3>
-                    <p style="color: #fff; margin-left: 2em">   Mon:8 am – 9 pm</p>
-                    <p style="color: #fff; margin-left: 2em">   Tue:8 am – 9 pm</p>
-                    <p style="color: #fff; margin-left: 2em">   Wed:8 am – 9 pm</p>
-                    <p style="color: #fff; margin-left: 2em">   Thu:8 am – 9 pm</p>
-                    <p style="color: #fff; margin-left: 2em">   Fri:8 am – 9 pm</p>
-                    <p style="color: #fff; margin-left: 2em">   Sat:8 am – 9 pm</p>
-                    <p style="color: #fff; margin-left: 2em">   Sun:8 am – 9 pm</p>
+                    <p style="color: #fff; margin-left: 2em">   24/7 Service</p>
                     <p >&nbsp;</p>
+
+                    <H3 style="color: #fff"><i class="fa-solid fa-house fa-2xs"></i> Address</H3>
+                    <p style="color: #fff; margin-left: 2em">
+                      121 Fellows Ct<br>
+                      Elmhurst, IL 60126
+                    </p>
                   </div>
                 </div>
 
@@ -352,7 +339,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Nura Heating & Cooling 2023</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Nura Heating & Cooling 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
